[tool.poetry]
name = "pythonista-api"
version = "0.1.0"
authors = ["EvieePy <29671945+EvieePy@users.noreply.github.com>"]
description = "The api that runs the Pythonista guild!"
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
aiohttp = "*"
asyncpg = "*"
starlette = "*"
uvicorn = { version = "*", extras = ["standard"] }

[tool.poetry.group.dev.dependencies]
black = "*"
isort = "*"
"asyncpg-stubs" = "*"
ruff = "*"

[tool.black]
line-length = 125
preview = true

[tool.ruff]
line-length = 125
exclude = ["docs/extensions/*.py"]
select = [
    "C4",
    "F",
    "G",
    "I",
    "PTH",
    "RUF",
    "SIM",
    "TCH",
    "UP",
    "W",
    "PERF",
    "ANN",
]
ignore = [
    "F401",
    "F402",
    "F403",
    "F405",
    "PERF203",
    "RUF001",
    "RUF009",
    "SIM105",
    "UP034",
    "UP038",
    "ANN101",
    "ANN102",
    "ANN401",
]
[tool.ruff.isort]
split-on-trailing-comma = true
combine-as-imports = true

[tool.ruff.flake8-annotations]
allow-star-arg-any = true

[tool.ruff.flake8-quotes]
inline-quotes = "single"

[tool.pyright]
useLibraryCodeForTypes = true
typeCheckingMode = "strict"
pythonVersion = "3.11"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
